# toss-tradebot-mvp

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .sops.yaml  CLAUDE.md  README.md
backend/: .env.example  .env.sops.yaml  .env.sops.yaml.example  pyproject.toml  requirements.txt
backend/api/: auth.py  main.py  schemas.py
backend/api/routes/: backtest.py  crazy.py  dashboard.py  execution.py  logs.py  meme_watch.py  moonshot.py  positions.py  powderkeg.py  sector_leaders.py  settings.py  sniper.py  super_signals.py  watchlist.py
backend/backtest/: __init__.py  engine.py
backend/cli/: moonshot.py
backend/discovery/: backtest.py  crazy_picks.py  moonshot_picks.py  scoring.py  universe.py
backend/discovery/activist/: __init__.py  alerts.py  dart_d002_poller.py  (+14 more)
backend/execution/: __init__.py  audit.py  exceptions.py  idempotency.py  kill_switch.py  market_calendar.py  models.py  order_manager.py  params.py  reconciler.py  risk_budget.py  signal_router.py
backend/powderkeg/: __init__.py  backtest.py  cash_verifier.py  config.py  event_study.py  llm_classifier.py  orders.py  piotroski.py  scheduler.py  screener.py  triggers.py
backend/scheduler/: cron.py
backend/scripts/: init_db.py
backend/services/: config.py  db.py  llm.py  models.py  notifier.py  notifier_profile.py  telegram_notifier.py
backend/tests/: test_data_sources.py  test_db.py  test_entry_price.py  test_motir_parser.py  test_powderkeg_api.py  test_powderkeg_backtest.py  test_powderkeg_cash_verifier.py  test_powderkeg_corp_codes.py  test_powderkeg_dart_financials.py  test_powderkeg_delisted.py  test_powderkeg_events.py  test_powderkeg_ftc.py  test_powderkeg_grid_backtest.py  test_powderkeg_krx.py  test_powderkeg_krx_admin.py  test_powderkeg_llm.py  test_powderkeg_models.py  test_powderkeg_orders.py  test_powderkeg_piotroski.py  test_powderkeg_pit_backtest.py  test_powderkeg_reverse_engineer.py  test_powderkeg_run_diff.py  test_powderkeg_screener.py  test_powderkeg_shareholders.py  test_powderkeg_triggers.py
(+241 files in other folders)
